[package]
name = "geologs"
version = "0.1.0"
authors = ["Denis Krivak <dokrivak@avito.ru>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
envy = "0.4"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
